# KResearch

./: .env.example  .gitignore  App.tsx  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.css  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  types.ts  wrangler.toml
.github/: pull_request_template.md
app/: actions.ts  globals.css  layout.tsx  page.tsx
components/: ActionButton.tsx  ApiKeyWarning.tsx  AppHeader.tsx  ClarificationChat.tsx  ClarificationDialog.tsx  ClientProviders.tsx  FinalReport.tsx  GlassCard.tsx  HistoryDrawer.tsx  HistoryPanel.tsx  LanguageSwitcher.tsx  LiquidButton.tsx  LiquidSlider.tsx  LoadingSpinner.tsx  LogsPanel.tsx  MarkdownRenderer.tsx  NotificationToast.tsx  QueryInput.tsx  ReportVisualizer.tsx  ResearchHeader.tsx  ResearchLogView.tsx  ResearchPanel.tsx  ResearchProgress.tsx  RoleManagerPanel.tsx  RoleSelector.tsx  SettingsModal.tsx  SourcesListView.tsx  Spinner.tsx  ThemeSwitcher.tsx  icons.tsx
contexts/: NotificationContext.tsx
contextx/: LanguageContext.tsx  NotificationContext.tsx
hooks/: useAppLogic.ts  useClarification.ts  useResearch.ts  useResearchSettings.ts
i18n/: en.json  zh.json
kresearch/: __init__.py  __main__.py  app.py  constants.py
lib/: agents 2.ts  agents.ts  duckduckgo.ts  gemini.ts  openai.ts  prompts.ts  translations.ts  types.ts
services/: apiKeyService.ts  clarification.ts  formatter.ts  geminiClient.ts  geminiService.ts  historyService.ts  index.ts  models.ts  outline.ts  planner.ts  plannerPrompt.ts  search.ts  (+8 more)
(+205 files in other folders)
