[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kresearch"
version = "0.1.0"
description = "AI-powered deep research agent with multi-provider LLM support"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "anthropic>=0.30",
    "google-generativeai>=0.7",
    "httpx>=0.27",
    "ollama>=0.3",
    "tavily-python>=0.4",
    "serpapi>=0.1",
    "duckduckgo-search>=6.0",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "aiohttp>=3.9",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "rich>=13.0",
    "python-telegram-bot>=21.0",
    "docker>=7.0",
    "aiofiles>=24.0",
]

[project.scripts]
kresearch = "kresearch.__main__:main"

[tool.setuptools.packages.find]
include = ["kresearch*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
